--- a/codegen/Cargo.toml
+++ b/codegen/Cargo.toml
@@ -1,18 +1,19 @@
 [package]
-name = "rustorm_codegen"
-version = "0.1.2"
-authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
+name = "wuta_codegen"
+version = "0.1.0"
+authors = [ "Mike Tang <daogangtang@gmail.com>" , "Jovansonlee Cesar <ivanceras@gmail.com>" ]
 license = "MIT"
 description = "code gen provides macro for generating code on data access objects on table metadata"
-repository = "https://github.com/ivanceras/rustorm"
-documentation = "https://docs.rs/rustorm"
+repository = "https://github.com/daogangtang/wuta"
+documentation = "https://docs.rs/wuta"
 keywords = ["orm", "postgresql", "sqlite"]
+edition = "2018"
 
 [dependencies]
-syn = "0.11.11"
-quote = "0.3.15"
+syn = "0.11"
+quote = "0.3"
 
-[dependencies.rustorm_dao]
+[dependencies.wuta_dao]
 #version = "0.1"
 path = "../dao"
 
