--- a/dao/Cargo.toml
+++ b/dao/Cargo.toml
@@ -12,7 +12,8 @@ edition = "2018"
 
 [dependencies]
 chrono = {version = "0.4", features = ["serde"]}
-uuid = {version = "0.7", features = ["serde", "v4"]}
+uuid = {version = "0.5", features = ["serde", "v4"]}
+#uuid = {version = "0.7", features = ["serde", "v4"]}
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 bigdecimal = {version = "0.1", features = ["serde"]}
