rename project to wumn, short of Wu Man Ning, the name of my wife :)
Signed-off-by: daogangtang <daogangtang@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,21 @@
 [package]
-name = "wuta"
+name = "wumn"
 version = "0.1.0"
 authors = ["Jovansonlee Cesar <ivanceras@gmail.com>", "Mike Tang <daogangtang@gmail.com>"]
 license = "MIT"
 description = "A thin abstract ORM over SQL and Rust types."
-repository = "https://github.com/daogangtang/wuta"
-documentation = "https://docs.rs/wuta"
+repository = "https://github.com/daogangtang/wumn"
+documentation = "https://docs.rs/wumn"
 readme = "README.md"
 keywords = ["orm", "postgresql"]
 edition = "2018"
 
 [dependencies]
 log = "0.4"
-postgres = {version = "0.15.1",features = ["with-uuid","with-chrono","with-time","with-openssl","with-geo","with-bit-vec", "with-serde_json"], optional = true}
-postgres-shared = {version = "0.4.0", optional = true}
-openssl = {version = "0.9.23", optional = true}
+#postgres = {version = "0.15",features = ["with-uuid","with-chrono","with-time","with-openssl","with-geo","with-bit-vec", "with-serde_json"], optional = true}
+postgres = {version = "0.15",features = ["with-uuid","with-chrono","with-time","with-geo","with-bit-vec", "with-serde_json"], optional = true}
+postgres-shared = {version = "0.4", optional = true}
+#openssl = {version = "0.10", optional = true}
 url = "1.5"
 cfg-if = "0.1.2"
 uuid = "0.5"
@@ -33,18 +34,18 @@ base64 = "0.9"
 geo = "0.4"
 time = "0.1"
 
-[dependencies.wuta_dao]
+[dependencies.wumn_dao]
 path = "dao"
 
-[dependencies.wuta_codegen]
+[dependencies.wumn_codegen]
 path = "codegen"
 
 [features]
 default = ["with-postgres"]
-with-postgres = ["postgres", "postgres-shared", "openssl"]
+with-postgres = ["postgres", "postgres-shared"]
 
 [package.metadata.docs.rs]
 features = ["with-postgres"]
 
 #[badges]
-#travis-ci = { repository = "daogangtang/wuta" }
+#travis-ci = { repository = "daogangtang/wumn" }
